--- a/README.adoc
+++ b/README.adoc
@@ -17,7 +17,7 @@ Pokud vás zajímají rady o obsahu, čtěte například http://www.herout.net/b
 === Používejte http://tex.stackexchange.com/questions/3393/what-is-xetex-exactly-and-why-should-i-use-it[XeLaTeX]
 
 Unicode je dnes standard, přestaňte používat obyčejný LaTeX, který s ním neumí pracovat.
-Určitě vás nebaví neustále řešit `l\'etající akcent`, T1 kódování a podobné výmysly minulého tisíciletí.
+Určitě vás nebaví neustále řešit `l\'etaj\'ic\'i akcent`, T1 kódování a podobné výmysly minulého tisíciletí.
 
 XeLaTeXu se nemusíte bát, přestože oficiální šablona je pro obyčejný LaTeX, její úprava je poměrně triviální.
 Oficiální šablona neexistuje, ale můžete se inspirovat třeba https://github.com/hroncok/bakalarka/blob/master/template/FITthesisXE.cls[touto].
