--- a/README.adoc
+++ b/README.adoc
@@ -185,17 +185,17 @@ Vložení zadání je jednoduché jak facka, do FIT šablony přidejte `pdfpages
 
 [source]
 ----
-\RequirePackage{pdfpages} % v šabloně, jinak \usepackage
+\RequirePackage{pdfpages}
 ----
 
-a nahraďte text "Sem vložte zadání.." příkazem:
+A nahraďte text "Sem vložte zadání.." příkazem:
 
 [source]
 ----
 \includepdf[pages={1}]{zadani.pdf}
 ----
 
-viz příklad https://github.com/VojtechMyslivec/mceliece-mathematica/blob/master/text/FITthesis.cls#L455[zde].
+Viz příklad https://github.com/VojtechMyslivec/mceliece-mathematica/blob/odevzdani/text/FITthesis.cls#L455[zde].
 
 Náš odevzdávací systém, který máme všichni tak rádi, to nějak umí udělat za vás, což je super, ale pokud chcete to PDF použít i jinde, bylo by stejně lepší to udělat ručně.
 Jak to ten sytém dělá (jestli vymění první stranu, nebo jen první stranu, která obsahuje magický text), těžko říct, protože je to magie (proprietární black box).
