--- a/README.adoc
+++ b/README.adoc
@@ -17,7 +17,7 @@ Pokud vás zajímají rady o obsahu, čtěte například http://www.herout.net/b
 
 === Používejte http://tex.stackexchange.com/questions/3393/what-is-xetex-exactly-and-why-should-i-use-it[XeLaTeX]
 
-Unicode je dnes standard, přestaňte používat obyčejný LaTeX, který s ním neumí pracovat.
+Unicode je dnes standard, přestaňte používat obyčejný LaTeX, který s ním umí pracovat jen omezeně.
 Určitě vás nebaví neustále řešit `l{backslash}'etaj{backslash}'ic{backslash}'i akcent`, T1 kódování a podobné výmysly minulého tisíciletí.
 
 XeLaTeXu se nemusíte bát, přestože oficiální šablona je pro obyčejný LaTeX, její úprava je poměrně triviální.
