Web screenshots? Use vector!

--- a/README.adoc
+++ b/README.adoc
@@ -179,6 +179,9 @@ První uvedený balíček je nadstavbou nad druhým, a lze je proto i všelijak 
 Oba mají velmi dobře čitelnou dokumentaci se spoustou konkrétních příkladů.
 Navíc lze na webu najít řadu inspirativních ukázek (viz např. http://pgfplots.sourceforge.net/gallery.html[PGFPlots Gallery] a http://www.texample.net[TeXample.net]). Existují i nástroje na konverzi grafů do TikZu, například https://github.com/nschloe/matplotlib2tikz[matplotlib2tikz] pro pythonní Matplotlib.
 
+Screenshoty webových stránek jdou také nahradit vektorem, stačí stránku s vhodným nastavením vytisknout do PDF,
+případně použít sofistikovanější nástorj, jako třeba https://wkhtmltopdf.org/[wkhtmltopdf].
+
 === Vložte zadání práce do PDF
 
 Tam, kde je napsané „Sem vložte zadání práce,“ máte vložit zadání práce.
